; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/synopsys/extr_dwc-xlgmac-net.c_xlgmac_vlan_rx_kill_vid.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/synopsys/extr_dwc-xlgmac-net.c_xlgmac_vlan_rx_kill_vid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.xlgmac_pdata = type { i32, %struct.xlgmac_hw_ops }
%struct.xlgmac_hw_ops = type { i32 (%struct.xlgmac_pdata.0*)* }
%struct.xlgmac_pdata.0 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i32, i32)* @xlgmac_vlan_rx_kill_vid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xlgmac_vlan_rx_kill_vid(%struct.net_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.xlgmac_pdata*, align 8
  %8 = alloca %struct.xlgmac_hw_ops*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.net_device*, %struct.net_device** %4, align 8
  %10 = call %struct.xlgmac_pdata* @netdev_priv(%struct.net_device* %9)
  store %struct.xlgmac_pdata* %10, %struct.xlgmac_pdata** %7, align 8
  %11 = load %struct.xlgmac_pdata*, %struct.xlgmac_pdata** %7, align 8
  %12 = getelementptr inbounds %struct.xlgmac_pdata, %struct.xlgmac_pdata* %11, i32 0, i32 1
  store %struct.xlgmac_hw_ops* %12, %struct.xlgmac_hw_ops** %8, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load %struct.xlgmac_pdata*, %struct.xlgmac_pdata** %7, align 8
  %15 = getelementptr inbounds %struct.xlgmac_pdata, %struct.xlgmac_pdata* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @clear_bit(i32 %13, i32 %16)
  %18 = load %struct.xlgmac_hw_ops*, %struct.xlgmac_hw_ops** %8, align 8
  %19 = getelementptr inbounds %struct.xlgmac_hw_ops, %struct.xlgmac_hw_ops* %18, i32 0, i32 0
  %20 = load i32 (%struct.xlgmac_pdata.0*)*, i32 (%struct.xlgmac_pdata.0*)** %19, align 8
  %21 = load %struct.xlgmac_pdata*, %struct.xlgmac_pdata** %7, align 8
  %22 = bitcast %struct.xlgmac_pdata* %21 to %struct.xlgmac_pdata.0*
  %23 = call i32 %20(%struct.xlgmac_pdata.0* %22)
  ret i32 0
}

declare dso_local %struct.xlgmac_pdata* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @clear_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
